[package]
name = "polkadot-runtime"
build = "build.rs"
version = "3.0.0-dev"
authors.workspace = true
edition.workspace = true

[dependencies]
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.137", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
static_assertions = "1.1.0"
smallvec = "1.8.0"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
beefy-primitives = { git = "https://github.com/karanvir12/substrate36.git", default-features = false ,package="sp-beefy", branch = "relpeer" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
inherents = { package = "sp-inherents", git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-api = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-std = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-io = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-mmr-primitives = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-runtime = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-staking = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-core = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-session = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-version = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-npos-elections = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }

pallet-authority-discovery = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-authorship = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-babe = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-bags-list = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-balances = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-bounties = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-child-bounties = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-transaction-payment = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-collective = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-democracy = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-elections-phragmen = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-election-provider-multi-phase = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-fast-unstake = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
frame-executive = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-grandpa = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-identity = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-im-online = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-indices = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-membership = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-multisig = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-nomination-pools = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-nomination-pools-runtime-api = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-offences = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-preimage = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-proxy = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-scheduler = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-session = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
frame-support = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" ,features = ["tuples-96"] }
pallet-staking = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-staking-reward-curve = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
frame-system = {git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
frame-system-rpc-runtime-api = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
polkadot-runtime-constants = { package = "polkadot-runtime-constants", path = "./constants", default-features = false }
pallet-timestamp = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-tips = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-treasury = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-vesting = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-utility = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
frame-election-provider-support = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-xcm = { path = "../../xcm/pallet-xcm", default-features = false }

pallet-contracts = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-randomness-collective-flip = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }

pallet-contracts-primitives = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }


frame-benchmarking = { git = "https://github.com/karanvir12/substrate36.git", default-features = false, optional = true , branch = "relpeer" }
frame-try-runtime = { git = "https://github.com/karanvir12/substrate36.git", default-features = false, optional = true , branch = "relpeer" }
frame-system-benchmarking = { git = "https://github.com/karanvir12/substrate36.git", default-features = false, optional = true , branch = "relpeer" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/karanvir12/substrate36.git", default-features = false, optional = true , branch = "relpeer" }
pallet-offences-benchmarking = { git = "https://github.com/karanvir12/substrate36.git", default-features = false, optional = true , branch = "relpeer" }
pallet-session-benchmarking = { git = "https://github.com/karanvir12/substrate36.git", default-features = false, optional = true , branch = "relpeer" }
pallet-nomination-pools-benchmarking = { git = "https://github.com/karanvir12/substrate36.git", default-features = false, optional = true , branch = "relpeer" }
hex-literal = { version = "0.3.4", optional = true }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
runtime-parachains = { package = "polkadot-runtime-parachains", path = "../parachains", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
xcm-builder = { package = "xcm-builder", path = "../../xcm/xcm-builder", default-features = false }


# Frontier FRAME
 pallet-base-fee = {version="1.0.0", path = "../../evm-frame/base-fee", default-features = false }
 pallet-dynamic-fee = {version = "4.0.0-dev", path = "../../evm-frame/dynamic-fee", default-features = false }
 pallet-ethereum = {version = "4.0.0-dev", path = "../../evm-frame/ethereum", default-features = false }
pallet-evm = {  path = "../../evm-frame/evm", default-features = false }
 pallet-evm-precompile-modexp = {version = "2.0.0-dev", path = "../../evm-frame/evm/precompile/modexp", default-features = false }
pallet-evm-precompile-sha3fips = {version = "2.0.0-dev", path = "../../evm-frame/evm/precompile/sha3fips", default-features = false }
 pallet-evm-precompile-simple = {version = "2.0.0-dev", path = "../../evm-frame/evm/precompile/simple", default-features = false }
 pallet-hotfix-sufficients = {version = "1.0.0", path = "../../evm-frame/hotfix-sufficients", default-features = false }
 pallet-evm-chain-id = { version = "1.0.0-dev", path = "../../evm-frame/evm-chain-id", default-features = false }

 fp-rpc = {version="3.0.0-dev", path = "../../evm-primitives/rpc", default-features = false }
 fp-self-contained = {version="1.0.0-dev", path = "../../evm-primitives/self-contained", default-features = false }

pallet-sudo = { git = "https://github.com/karanvir12/substrate36.git", default-features = false, branch = "relpeer" }

[dev-dependencies]
hex-literal = "0.3.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
keyring = { package = "sp-keyring", git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-trie = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
serde_json = "1.0.81"
separator = "0.4.1"
remote-externalities = { git = "https://github.com/karanvir12/substrate36.git", package = "frame-remote-externalities" , branch = "relpeer" }
tokio = { version = "1.22.0", features = ["macros"] }
sp-tracing = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }


# Frontier







[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"pallet-sudo/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"sp-mmr-primitives/std",
	"frame-support/std",
	"frame-executive/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-bags-list/std",
	"pallet-balances/std",
	"pallet-bounties/std",
	"pallet-child-bounties/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-collective/std",
	"pallet-elections-phragmen/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-democracy/std",
	"pallet-fast-unstake/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-nomination-pools/std",
	"pallet-nomination-pools-runtime-api/std",
	"pallet-offences/std",
	"pallet-preimage/std",
	"pallet-proxy/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-treasury/std",
	"pallet-tips/std",
	"pallet-babe/std",
	"pallet-vesting/std",
	"pallet-utility/std",
	"sp-runtime/std",
	"sp-staking/std",
	 "pallet-hotfix-sufficients/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"polkadot-runtime-constants/std",
	"sp-version/std",
	"serde_derive",
	"serde/std",
	"log/std",
	"babe-primitives/std",
	"sp-session/std",
	"runtime-common/std",
	"frame-try-runtime/std",
	"sp-npos-elections/std",
	"beefy-primitives/std",
	"frame-election-provider-support/std",
	"pallet-xcm/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
    "pallet-randomness-collective-flip/std",
	"pallet-contracts/std",
		"pallet-contracts-primitives/std",



  #frontier
	 "fp-rpc/std",
     "fp-self-contained/std",
      "pallet-base-fee/std",
     "pallet-dynamic-fee/std",
     "pallet-ethereum/std",
	 "pallet-evm-precompile-modexp/std",
     "pallet-evm/std",
     "pallet-evm-precompile-simple/std",
     "pallet-evm-precompile-sha3fips/std",
	 "pallet-evm-precompile-simple/std",
	 "pallet-evm-chain-id/std",


]
runtime-benchmarks = [
	"runtime-common/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-election-provider-support-benchmarking/runtime-benchmarks",
	"pallet-fast-unstake/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-nomination-pools/runtime-benchmarks",
	"pallet-nomination-pools-benchmarking/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-child-bounties/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"pallet-offences-benchmarking/runtime-benchmarks",
	"pallet-session-benchmarking/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"hex-literal",
	"xcm-builder/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"runtime-parachains/runtime-benchmarks", 
"pallet-evm/runtime-benchmarks",
	 "pallet-ethereum/runtime-benchmarks",
    "pallet-evm/runtime-benchmarks",
	"pallet-hotfix-sufficients/runtime-benchmarks",
		"pallet-contracts/runtime-benchmarks",







]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"runtime-common/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-child-bounties/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-fast-unstake/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-nomination-pools/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-xcm/try-runtime",
		"pallet-randomness-collective-flip/try-runtime",
			"pallet-contracts/try-runtime",


]
# When enabled, the runtime API will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime API exported functions
# in WASM.
disable-runtime-api = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = [
	"sp-api/disable-logging",
]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

runtime-metrics = ["runtime-parachains/runtime-metrics", "sp-io/with-tracing"]
