[package]
name = "peer-voter-bags"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }

generate-bags = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-io = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }


Peer-Runtime = { path = "../../runtime/polkadot" }
