[package]
name = "staking-miner"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
clap = { version = "4.0.9", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
jsonrpsee = { version = "0.16.2", features = ["ws-client", "macros"] }
log = "0.4.17"
paste = "1.0.7"
serde = "1.0.137"
serde_json = "1.0"
thiserror = "1.0.31"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "sync"] }
remote-externalities = { git = "https://github.com/karanvir12/substrate36.git", package = "frame-remote-externalities" , branch = "relpeer" }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
sp-core = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-version = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-io = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-runtime = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-npos-elections = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-transaction-pool-api = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

frame-system = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
frame-support = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
frame-election-provider-support = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
pallet-election-provider-multi-phase = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
pallet-staking = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
pallet-balances = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
pallet-transaction-payment = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

core-primitives = { package = "polkadot-core-primitives", path = "../../core-primitives" }

runtime-common = { package = "polkadot-runtime-common", path = "../../runtime/common" }
polkadot-runtime = { path = "../../runtime/polkadot" }

exitcode = "1.1"

# sub-tokens = { git = "https://github.com/paritytech/substrate-debug-kit", branch = "master" }

sub-tokens ={ path = "../../sub-tokens"}
signal-hook = "0.3"
futures-util = "0.3"

[dev-dependencies]
assert_cmd = "2.0.4"
