[package]
name = "pallet-xcm-benchmarks"
authors.workspace = true
edition.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/karanvir12/substrate36.git" , branch = "relpeer" }
frame-system = { default-features = false, git = "https://github.com/karanvir12/substrate36.git" , branch = "relpeer" }
sp-runtime = { default-features = false, git = "https://github.com/karanvir12/substrate36.git" , branch = "relpeer" }
sp-std = { default-features = false, git = "https://github.com/karanvir12/substrate36.git" , branch = "relpeer" }
xcm-executor = { path = "../xcm-executor", default-features = false }
frame-benchmarking = { default-features = false, git = "https://github.com/karanvir12/substrate36.git" , branch = "relpeer" }
xcm = { path = "..", default-features = false }
log = "0.4.17"

[dev-dependencies]
pallet-balances = { git = "https://github.com/karanvir12/substrate36.git" , branch = "relpeer" }
pallet-assets = { git = "https://github.com/karanvir12/substrate36.git" , branch = "relpeer" }
sp-core = { git = "https://github.com/karanvir12/substrate36.git" , branch = "relpeer" }
sp-io = { git = "https://github.com/karanvir12/substrate36.git" , branch = "relpeer" }
sp-tracing = { git = "https://github.com/karanvir12/substrate36.git" , branch = "relpeer" }
xcm-builder = { path = "../xcm-builder" }
xcm = { path = ".." }
# temp
pallet-xcm = { path = "../pallet-xcm" }
Peer-Runtime-common = { path = "../../runtime/common" }

polkadot-primitives = { path = "../../primitives" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std"
]
runtime-benchmarks = [
	"xcm/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
