[package]
name = "xcm-builder"
description = "Tools & types for building with XCM and its executor."
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }
sp-std = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-arithmetic = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-io = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-runtime = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
frame-support = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
frame-system = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-transaction-payment = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
log = { version = "0.4.17", default-features = false }

# Polkadot dependencies
peer-parachain = { path = "../../parachain", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
pallet-balances = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
pallet-xcm = { path = "../pallet-xcm" }
Peer-Runtime-parachains = { path = "../../runtime/parachains" }
[features]
default = ["std"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks"
]
std = [
	"log/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"xcm/std",
	"xcm-executor/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"peer-parachain/std",
	"pallet-transaction-payment/std",
]
