[package]
name = "xcm-simulator"
description = "Test kit to simulate cross-chain message passing and XCM execution"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
paste = "1.0.7"

frame-support = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-io = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-std = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

xcm = { path = "../" }
xcm-executor = { path = "../xcm-executor" }
peer-core-primitives = { path = "../../core-primitives"}
peer-parachain = { path = "../../parachain" }
Peer-Runtime-parachains = { path = "../../runtime/parachains" }
