[package]
name = "peer-node-core-backing"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
sp-keystore = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
peer-primitives = { path = "../../../primitives" }
peer-node-primitives = { path = "../../primitives" }
peer-node-subsystem = {path = "../../subsystem" }
peer-node-subsystem-util = { path = "../../subsystem-util" }
erasure-coding = { package = "peer-erasure-coding", path = "../../../erasure-coding" }
statement-table = { package = "peer-statement-table", path = "../../../statement-table" }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
gum = { package = "tracing-gum", path = "../../gum" }
thiserror = "1.0.31"
fatality = "0.0.6"

[dev-dependencies]
sp-core = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-application-crypto = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-keyring = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-keystore = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-tracing = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
futures = { version = "0.3.21", features = ["thread-pool"] }
assert_matches = "1.4.0"
peer-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
test-helpers = { package = "peer-primitives-test-helpers", path = "../../../primitives/test-helpers" }
