[package]
name = "peer-node-core-chain-api"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
sp-blockchain = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
peer-primitives = { path = "../../../primitives" }
peer-node-subsystem = {path = "../../subsystem" }
peer-node-subsystem-util = { path = "../../subsystem-util" }
sc-client-api = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-consensus-babe = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

[dev-dependencies]
futures = { version = "0.3.21", features = ["thread-pool"] }
maplit = "1.0.2"
parity-scale-codec = "3.1.5"
peer-node-primitives = { path = "../../primitives" }
peer-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
