[package]
name = "peer-node-core-chain-selection"
description = "Chain Selection Subsystem"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
futures-timer = "3"
gum = { package = "tracing-gum", path = "../../gum" }
peer-primitives = { path = "../../../primitives" }
peer-node-primitives = { path = "../../primitives" }
peer-node-subsystem = { path = "../../subsystem" }
peer-node-subsystem-util = { path = "../../subsystem-util" }
kvdb = "0.13.0"
thiserror = "1.0.31"
parity-scale-codec = "3.1.5"

[dev-dependencies]
peer-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
parking_lot = "0.12.0"
assert_matches = "1"
kvdb-memorydb = "0.13.0"
