[package]
name = "peer-node-core-dispute-coordinator"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
parity-scale-codec = "3.1.5"
kvdb = "0.13.0"
thiserror = "1.0.31"
lru = "0.11.1"
fatality = "0.0.6"

peer-primitives = { path = "../../../primitives" }
peer-node-primitives = { path = "../../primitives" }
peer-node-subsystem = { path = "../../subsystem" }
peer-node-subsystem-util = { path = "../../subsystem-util" }

sc-keystore = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }


[dev-dependencies]
kvdb-memorydb = "0.13.0"
peer-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-keyring = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-core = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-keystore = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
assert_matches = "1.4.0"
test-helpers = { package = "peer-primitives-test-helpers", path = "../../../primitives/test-helpers" }
futures-timer = "3.0.2"
sp-application-crypto = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

[features]
# If not enabled, the dispute coordinator will do nothing.
disputes = []
