[package]
name = "peer-node-core-pvf-checker"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
thiserror = "1.0.31"
gum = { package = "tracing-gum", path = "../../gum" }

peer-node-primitives = { path = "../../primitives" }
peer-node-subsystem = { path = "../../subsystem" }
peer-primitives = { path = "../../../primitives" }
peer-node-subsystem-util = { path = "../../subsystem-util" }
peer-overseer = { path = "../../overseer" }

sp-keystore = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

[dev-dependencies]
sp-core = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-runtime = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-keystore = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-keyring = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
peer-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers"}
test-helpers = { package = "peer-primitives-test-helpers", path = "../../../primitives/test-helpers" }
sp-application-crypto = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
futures-timer = "3.0.2"
