[package]
name = "peer-node-core-runtime-api"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
lru = "0.10"

sp-consensus-babe = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

peer-primitives = { path = "../../../primitives" }
peer-node-subsystem = { path = "../../subsystem" }
peer-node-subsystem-types = { path = "../../subsystem-types" }
peer-node-subsystem-util = { path = "../../subsystem-util" }

[dev-dependencies]
sp-api = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-authority-discovery = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-core = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-keyring = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
futures = { version = "0.3.21", features = ["thread-pool"] }
peer-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
peer-node-primitives = { path = "../../primitives" }
test-helpers = { package = "peer-primitives-test-helpers", path = "../../../primitives/test-helpers" }
