[package]
name = "peer-availability-recovery"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
lru = "0.10.1"
rand = "0.8.5"
fatality = "0.0.6"
thiserror = "1.0.31"
gum = { package = "tracing-gum", path = "../../gum" }

peer-erasure-coding = { path = "../../../erasure-coding" }
peer-primitives = { path = "../../../primitives" }
peer-node-primitives = { path = "../../primitives" }
peer-node-subsystem = {path = "../../subsystem" }
peer-node-subsystem-util = { path = "../../subsystem-util" }
peer-node-network-protocol = { path = "../../network/protocol" }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
sc-network = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

[dev-dependencies]
assert_matches = "1.4.0"
env_logger = "0.9.0"
futures-timer = "3.0.2"
log = "0.4.17"

sp-core = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-keyring = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-application-crypto = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-network = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

peer-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
peer-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
