[package]
name = "peer-statement-distribution"
description = "Statement Distribution Subsystem"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
peer-primitives = { path = "../../../primitives" }
sp-staking = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-keystore = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
peer-node-subsystem = {path = "../../subsystem" }
peer-node-primitives = { path = "../../primitives" }
peer-node-subsystem-util = { path = "../../subsystem-util" }
peer-node-network-protocol = { path = "../../network/protocol" }
arrayvec = "0.5.2"
indexmap = "1.9.1"
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
fatality = "0.0.6"

[dev-dependencies]
peer-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
assert_matches = "1.4.0"
sp-authority-discovery = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-keyring = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-core = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-application-crypto = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-keystore = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-tracing = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-keystore = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-network = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
futures-timer = "3.0.2"
peer-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
