[package]
name = "peer-test-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }

# Polkadot dependencies
peer-test-runtime = { path = "../../../runtime/test-runtime" }
peer-test-service = { path = "../service" }
peer-primitives = { path = "../../../primitives" }
peer-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-service = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-block-builder = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-consensus = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-blockchain = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-runtime = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-inherents = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-core = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-api = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-timestamp = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-consensus = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-consensus-babe = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-state-machine = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
futures = "0.3.21"
